# guidxp

./: .gitignore  CMakeLists.txt  README.md  guidxp.c  guidxp.h  test.c  xp-guid.c  xp-guid.h
apple/testapp/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m
apple/testapp.xcodeproj/: project.pbxproj
apple/testapp/Base.lproj/: Main.storyboard
win32/: guidxp.sln  test.sln  test.vcxproj  test.vcxproj.filters
win32/guidxp/: guidxp.def  guidxp.vcxproj  guidxp.vcxproj.filters
win32/test/: test.vcxproj  test.vcxproj.filters
